# performance-service

./: .dockerignore  .env.example  CODEOWNERS  Cargo.toml  Dockerfile  LICENSE  Makefile  PRACTICAL_RECALC_GUIDE.md  README.md
.github/workflows/: k8s-deploy.yml  production-deploy.yml
chart/: values.yaml
k8s/jobs/: README.md  deploy-template.yaml  generate-job.sh
k8s/jobs/examples/: full-recalc.yaml  reaggregate-only.yaml  std-all-variants.yaml  test-single-beatmap.yaml
migrations/: 20221030141858_queue-table.sql  20221030142839_rework-scores.sql  20221030145048_reworks-table.sql  20221030172344_rework-stats.sql  20221030210713_add-beatmapset-id.sql  20221031140935_fix-scores-primary-key.sql  20221031141116_queue-tracking.sql  20221031141406_rework-tracking.sql  20221112140530_fix-score-id-type.sql
scripts/: bootstrap.sh  run-compose-recalc.sh
src/: config.rs  context.rs  errors.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/routes/: calculate.rs  health.rs  mod.rs
src/api/routes/reworks/: leaderboard.rs  mod.rs  queue.rs  reworks.rs  scores.rs  search.rs  sessions.rs  user.rs
src/deploy/: mod.rs
src/individual_recalc/: mod.rs
src/mass_recalc/: mod.rs
src/models/: beatmap.rs  leaderboard.rs  mod.rs  pool.rs  queue.rs  rework.rs  score.rs  stats.rs  user.rs
src/processor/: mod.rs
src/repositories/: leaderboards.rs  reworks.rs  sessions.rs
src/usecases/: beatmaps.rs  leaderboards.rs  mod.rs  reworks.rs  sessions.rs
