[package]
name = "performance-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tsunyoku <tsunyoku@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "3.0.0-beta.5", features = ["derive", "env"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.48"
log = "0.4.14"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
axum = { version = "0.3.4", features = ["tower-log"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
] }
lapin = "2.1.1"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-lapin = "0.10.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6.9"
tokio-executor-trait = "2.1.0"
tokio-stream = "0.1.11"
redis = { version = "0.22.0", features = ["tokio-comp"] }
bcrypt = "0.13.0"
uuid = { version = "1.2.1", features = ["v4"] }
futures = "0.3.17"
strsim = "0.10.0"
akatsuki-pp-rs = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "b96019f50aa7d09bcbde60016481a69df04315e4", features = [
    "async_tokio",
] }
reqwest = "0.11"
conceptual-rework = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", branch = "conceptual-rework", features = [
    "async_tokio",
] }
async-trait = "0.1.62"
skill-rebalance = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", branch = "skill-rebalance", features = [
    "async_tokio",
] }
rust-s3 = "0.33.0"
structured-logger = "1.0.3"
woot-precision = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "9607e63c06927fee0cf2f94ce3a2039e3713387c", features = [
    "async_tokio",
] }
cursordance = { package = "akatsuki-pp", git = "https://github.com/CursorDance/akatsuki-pp-rs", rev = "56a71011e13274e63f6548611f3d5c822377c0d3", features = [
    "async_tokio",
] }
no-accuracy = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "d3ab5af7a63f17a2a40bbce573b06ea451375638", features = [
    "async_tokio",
] }
simplify-relax = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "ce896ca661de4aa4c0c6739a703c4a162426878b", features = [
    "async_tokio",
] }
improved-miss-penalty = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "588f8fe090bbf262cb86cd95ac9c9c9f35b0da03", features = [
    "async_tokio",
] }
accuracy-fun = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "879fd8caa2cb082a5b9c0761fc2ddca3b283b226", features = [
    "async_tokio",
] }

[profile.release]
lto = "fat"
codegen-units = 16
opt-level = 3
panic = "abort"
