[package]
name = "performance-service"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["tsunyoku <tsunyoku@gmail.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "3.0.0-beta.5", features = ["derive", "env"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.87"
anyhow = "1.0.48"
log = "0.4.14"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace"] }
axum = { version = "0.3.4", features = ["tower-log"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.6.2", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
] }
lapin = "2.1.1"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
deadpool-lapin = "0.10.0"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6.9"
tokio-executor-trait = "2.1.0"
tokio-stream = "0.1.11"
redis = { version = "0.22.0", features = ["tokio-comp"] }
bcrypt = "0.13.0"
uuid = { version = "1.2.1", features = ["v4"] }
futures = "0.3.17"
strsim = "0.10.0"
akatsuki-pp-rs = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "281ff8816fbabfb22959b6da367264a56a50759e" }
reqwest = "0.11"
async-trait = "0.1.62"
structured-logger = "1.0.3"
improved-miss-penalty = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "bb1c8ee99a6788f4706fbadee47894590c4fded6", features = [
    "async_tokio",
] }
flashlight-hotfix = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "6e840d57201255cf7496cc5191b8058d7260265b", features = [
    "async_tokio",
] }
remove-accuracy-pp = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "5b6926bef27dfc16a8fec2fd14faaa07cbd214a4", features = [
    "async_tokio",
] }
stream-nerf-speed-value = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "72fa5510ef66898308fc6bb3b2f9d3be1dd606c5", features = [
    "async_tokio",
] }
remove-manual-adjustments = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "68063c480e4b4d3d5872d1ce25cf260ff0e84b38", features = [
    "async_tokio",
] }
fix-inconsistent-powers = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "773fc16a60546c92b501ad1782757ab897365227", features = [
    "async_tokio",
] }
aim-accuracy-fix = { package = "akatsuki-pp", git = "https://github.com/osuAkatsuki/akatsuki-pp-rs", rev = "ee4e33bdc3beff690eed9cda4c8b164a21643a7e" }
md5 = "0.7.0"
